# kotones-auto-assistant

./: .coveragerc  .gitignore  .gitmodules  AGENTS.md  MANIFEST.in  README.md  WHATS_NEW.md  detect_card.py  detect_yellow.py  justfile  plan.md  pyproject.toml  requirements.GkmasObjectManager.txt  requirements.dev.txt  requirements.txt  template.env
.agents/skills/config-item/: SKILL.md
.claude/commands/: kaa-config.md
bootstrap/kaa-bootstrap/: launcher.py  repo.py  util.py
docs/: CHANGELOG.md  DEVELOPMENT.md  GUIDE.md  qml-form-components.md  qml-migration-plan.md
experiments/: ai_process.py  detect_card_simple.py
kaa/: README.md  __init__.py  common.py  constants.py  debug_entry.py  errors.py  hotload_entry.py  kaa_context.py
kaa-resource-game/: MANIFEST.in  pyproject.toml
kaa-resource-game/kaa/resource/game/: .gitignore  version.json
kaa-rn/: app.json  package-lock.json  package.json
kaa-rn/src/: App.tsx
kaa-rn/src/api/: client.ts
kaa-rn/src/components/: BottomNav.tsx  FormFields.tsx  InstantTooltip.tsx  LogPanel.tsx  MD3Input.tsx  MD3MultiSelect.tsx  MD3Switch.tsx  MD3SwitchItem.tsx  ModuleCard.tsx  Sidebar.tsx  StatusCard.tsx
kaa-rn/src/data/: mockData.ts
kaa-rn/src/hooks/: useBackendVersion.ts  useConfig.ts  useDeviceType.ts  useOptimisticMutation.ts  (+3 more)
kaa-ui/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
kaa-ui/app/: AppShell.tsx  app.css  root.tsx  routes.ts
kaa-ui/src/: App.css  App.tsx  index.css  main.tsx
kaa/config/: __init__.py  _idol.py  base_config.py  const.py  context.py  deck.py  deck_defaults.py  manager.py  migration.py  migrations.py  produce.py  schema.py  shared.py  upgrade.py
kaa/db/: __init__.py  _util.py  constants.py  drink.py  idol_card.py  produce_enums.py  school_event.py  skill_card.py  sqlite.py
kaa/game_data/: manifest.py  paths.py  update_ui.py  updater.py
kaa/game_ui/: __init__.py  common.py  commu_event_buttons.py  dialog.py  drinks_overview.py  elements.py  idols_overview.py  schedule.py  scrollable.py  skill_card_select.py  toolbar.py
kaa/image_db/: __init__.py  datasource.py  db.py  prebuild.py
kaa/main/: api_server.py  cli.py  dmm_host.py  gr.py  kaa.py  qml_app.py  web.py
kaa/server/: __init__.py  app.py  events.py  models.py  rpc.py
kaa/services/: config_service.py  task_control_service.py
kaa/tasks/: __init__.py  common.py  end_game.py  start_game.py
kaa/ui/: common.py  facade.py  gradio_view.py
kaa/util/: logging.py  paths.py  reactive.py  telemetry.py  telemetrydeck.py  trace.py
kotonebot/: debug_entry.py
kotonebot/kaa/: common.py  kaa_context.py
tests/: util.py
tests/core/: test_color.py
tests/db/: test_db_smoke.py  test_db_util.py  test_produce_enums.py
tools/: extract_changelog.py  make_resources.py
tools/db/: extract_resources.py  extract_schema.py
ui/: package-lock.json  package.json  vite.config.ts
(+454 files in other folders)
