[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "v2025.11.post4"
name = "ksaa"
description = "Kotones Auto Assistant(kaa) is a script for game 'Gakuen Idol M@ster' that automates the dailies and produces."
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = [
    # Image Processing & OCR
    "opencv-python~=4.10",
    "rapidocr_onnxruntime~=1.4",
    "av==14.0.1",
    "scikit-image~=0.25",
    "thefuzz~=0.22",
    # Adb Control
    "adbutils~=2.8",
    "uiautomator2~=3.2",
    # Visual Debugger
    "fastapi~=0.115.6",
    "uvicorn~=0.34.0",
    "python-multipart~=0.0.20",
    "websockets~=14.1",
    "psutil~=6.1",
    # GUI
    "gradio~=6.0",
    # Configuration
    "pydantic~=2.10",
    # Resource
    "ksaa-res==0.2.0",
    # Other
    "typing-extensions~=4.12",
    "python-dotenv~=1.0.1",
    # ImportError: DLL load failed while importing onnxruntime_pybind11_state
    "onnxruntime~=1.14.0",
    # A module that was compiled using NumPy 1.x cannot be run in NumPy 2.0.0 as it may crash.
    "numpy<2.0",
    # For DMM version
    # TODO: move these dependencies to optional-dependencies
    "pywin32==310; sys_platform == 'win32'",
    "ahk~=1.8.3; sys_platform == 'win32'",
    "win11toast~=0.35; sys_platform == 'win32'",  # For Windows Toast Notification
    "keyboard~=0.13.5",
    "kotonebot[android]==0.7.0",
    "kotonebot[windows]==0.7.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    # Packaging
    "pyinstaller==6.11.1",
    "twine==6.1.0",
    "build==1.2.2.post1",
    # Profiling
    "snakeviz==2.2.2",
    # Make resources
    "jinja2==3.1.5",
    "dataclasses-json==0.6.7",
    # Extract game data
    "PyYAML==6.0.2",
    "tqdm==4.67.1",
    "pypika==0.48.9",
    "UnityPy==1.21.3",
    "rich==14.2.0",
    # Coverage Test
    "coverage",

    # Manifest: request, decrypt, parse, export
    "requests==2.32.5",
    "cryptography==42.0.0",
    "protobuf==6.33.1",
    "pandas==2.3.3",
    # Object/Media plugins for .unity3d, image, audio
    "pillow==11.3.0",
    "pydub==0.25.1",
    # Additional
    "flask==3.1.2",
]


[tool.setuptools]
package-dir = { "kaa" = "kaa" }

[project.scripts]
kaa = "kaa.main.cli:main"

[tool.setuptools.dynamic]
version = {file = "./version"}

[tool.basedpyright]
typeCheckingMode = "basic"
